--- a/vue/src/assets/css/manager.css
+++ b/vue/src/assets/css/manager.css
@@ -5,7 +5,7 @@
 
 .manager-header {
     display: flex;
-    background-color: #578bba;
+    background-color: #f8a23d;
 }
 
 .manager-header-left {
@@ -129,7 +129,7 @@
 }
 
 .el-menu-item.is-active {
-    background-color: #4e76a8 !important;
+    background-color: #f8a23d !important;
     color: #fff;
 }
 
@@ -146,7 +146,7 @@
 }
 
 .el-menu-item:not(.is-active):hover {
-    background-color: #94b1c9 !important;
+    background-color: #f8a23d !important;
 }
 
 /*.el-menu-item:hover {*/
