公益活动前台及评论

--- a/vue/src/assets/css/front.css
+++ b/vue/src/assets/css/front.css
@@ -66,10 +66,13 @@
 }
 
 .main-content {
-    width: 70%;
+    width: 60%;
     margin: 10px auto;
 }
 
+.main-body{
+    min-height: calc(100vh -  216px);
+}
 /* ElementUI 样式覆盖 */
 .el-menu.el-menu--horizontal {
     border: none !important;
